rubocop/examples/good/Style_SpaceAfterMethodName.rb
# Do not put a space between a method name and the opening parenthesis.

# good
f(3 + 2) + 1
