rubocop/examples/bad/Style_SpaceAfterMethodName.rb
# Do not put a space between a method name and the opening parenthesis.

# bad
f (3 + 2) + 1

